[gd_scene load_steps=8 format=3 uid="uid://cexaqb2uejdpi"]

[ext_resource type="Shader" path="res://player.gdshader" id="1_0u1rv"]
[ext_resource type="Script" path="res://player.gd" id="1_si6jg"]
[ext_resource type="AudioStream" uid="uid://b1ogq3tuxmoe1" path="res://sounds/shoot.wav" id="2_w1guy"]
[ext_resource type="AudioStream" uid="uid://dg5jdwoon42hb" path="res://sounds/shipExplosion.wav" id="3_deup2"]
[ext_resource type="Texture2D" uid="uid://clq7afn8w865q" path="res://light.webp" id="5_yjoak"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d56tw"]
shader = ExtResource("1_0u1rv")
shader_parameter/hit_opacity = 0.0

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_2kqb6"]

[node name="player" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_d56tw")
collision_mask = 10
motion_mode = 1
safe_margin = 1.2
script = ExtResource("1_si6jg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("ConvexPolygonShape2D_2kqb6")
debug_color = Color(0.694118, 0.494118, 0.101961, 0.419608)

[node name="cooldownTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="damageTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_w1guy")
volume_db = -2.971
pitch_scale = 1.61

[node name="explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_deup2")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -2)
color = Color(1, 0.584314, 1, 1)
shadow_enabled = true
texture = ExtResource("5_yjoak")
texture_scale = 4.81

[connection signal="timeout" from="cooldownTimer" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="damageTimer" to="." method="_on_damage_timer_timeout"]
